[package]
name = "endurox-rs"
version = "0.1.0"
edition = "2021"

# REQUIRED by crates.io
description = "Dev middleware utilities for Enduro/X projects (Rust bindings)."
license = "AGPLv3"   # pick one license or an SPDX expression

# Strongly recommended
readme = "README.md"
repository = "https://github.com/endurox-dev/endurox-rs"
homepage = "https://www.mavimax.com"
documentation = "https://www.endurox.org/dokuwiki"
keywords = ["middleware", "development", "endurox", "bindings", "rust"]
categories = ["development-tools::build-utilities"]

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.70"        # pin a version for stability
cc = "1.0"

